# OpenGameFramework

./: .gitignore  BetaGameFramework.sln  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  OpenGameFramework.sln  README.md  index.html  params.json
Beta Framework/: CMakeLists.txt  CTestTestfile.cmake  Makefile
Beta Framework/GfxRenderSubsystem/: CMakeLists.txt  CTestTestfile.cmake  CommonGfx.h  CommonShader.h  GfxBackend.cpp  GfxBackend.h  GfxCamera.cpp  GfxCamera.h  GfxRenderSubsystem.vcxproj  GfxRenderSubsystem.vcxproj.filters  GfxShaderInstance.cpp  GfxShaderInstance.h  GfxShaders.cpp  GfxShaders.h  GfxSubsystem.cpp  GfxSubsystem.h  GfxUtility.cpp  GfxUtility.h  GfxViewport.cpp  GfxViewport.h  GfxWindow.cpp  GfxWindow.h  ILight.cpp  ILight.h  IRenderable.cpp  IRenderable.h  IRenderableInstance.cpp  IRenderableInstance.h  ITexture.cpp  ITexture.h  Makefile  Material.cpp  Material.h  MaterialConstants.h  MaterialInstance.cpp  MaterialInstance.h  MaterialManager.cpp  MaterialManager.h  MeshRenderable.cpp  MeshRenderable.h  (+12 more)
Beta Framework/GfxRenderSubsystem/Sample Shaders/Ambient/: ambient.vert
Beta Framework/GfxRenderSubsystem/Sample Shaders/Basic/: basic.frag  basic.vert
Beta Framework/GfxRenderSubsystem/Sample Shaders/MultiColor/: multicolor.frag
Beta Framework/GfxRenderSubsystem/Sample Shaders/Texture/: texture.frag  texture.vert
Beta Framework/GfxRenderSubsystem/include/: GfxSubsystem.h  common.h
Beta Framework/GfxRenderSubsystem/src/: GfxSubsystem.cpp
BetaGameFramework/: BetaGameFramework.cpp  BetaGameFramework.vcxproj  README.md  (+2 more)
Delta Applications/GTests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  gtest-common.h
Delta Applications/GTests/Framework/: CMakeLists.txt  CTestTestfile.cmake  Makefile
Delta Applications/GTests/Framework/Core/: CMakeLists.txt  CORE-GTest  CORE-GTest-ConfigFile  CORE-GTest-ErrorCatch  CORE-GTest-IntrusiveLink  CORE-GTest-MessageClient  CORE-GTest-MessageServer  CORE-GTest-Wfile  CORE-GTest-WorldObject  CTestTestfile.cmake  Makefile  config_file_gtest.cpp  error_catch_gtest.cpp  intrusive_link_gtest.cpp  message_client_gtest.cpp  message_server_gtest.cpp  test.txt  wfile_gtest.cpp  world_object_gtest.cpp
Delta Applications/GTests/Framework/Gfx/: CMakeLists.txt  CTestTestfile.cmake  GFX-GTest  Makefile
Delta Applications/Tests/: CMakeLists.txt  CTestTestfile.cmake  CoreTestSheet-Debug.props  CoreTestSheet-Release.props  GfxTestSheet-Debug.props  GfxTestSheet-Release.props  GfxTestSheet.props  Makefile
Delta Applications/Tests/AutomatedTesting/: AutomatedTesting.cpp  AutomatedTesting.vcxproj  AutomatedTesting.vcxproj.filters  ReadMe.txt  stdafx.cpp
Delta Applications/Tests/Bootstrap/: camera.h  cube.h
Delta Applications/Tests/CORE-ConfigReadWriteTest/: CMakeLists.txt  CORE-ConfigReadWriteTest  CORE-ConfigReadWriteTest.cpp  CORE-ConfigReadWriteTest.vcxproj  CORE-ConfigReadWriteTest.vcxproj.filters  CTestTestfile.cmake  Makefile  ReadMe.txt  stdafx.cpp  targetver.h  test.config  test.ogfconfig
Delta Applications/Tests/CORE-MessagingTest/: CMakeLists.txt  CORE-MessagingTest  CORE-MessagingTest.cpp  CORE-MessagingTest.vcxproj  CORE-MessagingTest.vcxproj.filters  CTestTestfile.cmake  Makefile  ReadMe.txt  stdafx.cpp  stdafx.h
Delta Applications/Tests/GFX-Ambient/: CMakeLists.txt  CTestTestfile.cmake  GFX-Ambient
Delta Applications/Tests/GFX-BasicLightTest/: GFX-BasicLightTest.cpp  GFX-BasicLightTest.vcxproj  GFX-BasicLightTest.vcxproj.filters
Delta Applications/Tests/GFX-CameraMoveTest/: CMakeLists.txt  CTestTestfile.cmake  GFX-CameraMoveTest  GFX-CameraMoveTest.cpp  GFX-CameraMoveTest.vcxproj  GFX-CameraMoveTest.vcxproj.filters  Makefile  ReadMe.txt  stdafx.cpp  stdafx.h
Delta Applications/Tests/GFX-Cube/: CMakeLists.txt  CTestTestfile.cmake  GFX-Cube  GFX-Cube.cpp  GFX-Cube.vcxproj  GFX-Cube.vcxproj.filters  Makefile
Delta Applications/Tests/GFX-CubeMapTex/: CMakeLists.txt  CTestTestfile.cmake  GFX-CubeMapTex.cpp  GFX-CubeMapTex.vcxproj  GFX-CubeMapTex.vcxproj.filters  Makefile
Delta Applications/Tests/GFX-CubeMapTex/Textures/: test.ppm
Delta Applications/Tests/GFX-MaterialTest/: GFX-MaterialTest.cpp  GFX-MaterialTest.vcxproj  GFX-MaterialTest.vcxproj.filters
Delta Applications/Tests/GFX-MultiColor/: CMakeLists.txt  CTestTestfile.cmake  GFX-MultiColor  GFX-MultiColor.cpp  GFX-MultiColor.vcxproj  GFX-MultiColor.vcxproj.filters  Makefile  ReadMe.txt  stdafx.cpp
Delta Applications/Tests/GFX-MultiColor/Debug/: GFX-MultiColor.pch
Delta Applications/Tests/GFX-MultiCube/: CMakeLists.txt  CTestTestfile.cmake  GFX-MultiCube  GFX-MultiCube.cpp  GFX-MultiCube.vcxproj  GFX-MultiCube.vcxproj.filters  Makefile
Delta Applications/Tests/GFX-MultiCubeTex/: CMakeLists.txt  CTestTestfile.cmake  GFX-MultiCubeTex  GFX-MultiCubeTex.cpp  GFX-MultiCubeTex.vcxproj  GFX-MultiCubeTex.vcxproj.filters  Makefile
Delta Applications/Tests/GFX-TextureTest/: CMakeLists.txt  CTestTestfile.cmake  GFX-TextureTest  GFX-TextureTest.cpp  GFX-TextureTest.vcxproj  GFX-TextureTest.vcxproj.filters  Makefile  ReadMe.txt  a.ppm  stdafx.cpp  stdafx.h  targetver.h
Delta Applications/Tests/GFX-TextureTest/Debug/: GFX-TextureTest.pch
Delta Applications/Tests/GFX-TextureTest/Release/: GFX-TextureTest.pch
Delta Applications/Tests/GfxRenderExample/: CMakeLists.txt  CTestTestfile.cmake  GfxRenderExample  GfxRenderExample.cpp  GfxRenderExample.vcxproj  GfxRenderExample.vcxproj.filters  Makefile  ReadMe.txt  stdafx.cpp  stdafx.h
Delta Applications/Tests/GfxViewportTest/: CMakeLists.txt  CTestTestfile.cmake  GfxViewportTest  GfxViewportTest.cpp  GfxViewportTest.vcxproj  GfxViewportTest.vcxproj.filters  Makefile  ReadMe.txt  stdafx.cpp  stdafx.h
Delta Applications/Tests/SDL-InputTest/: CMakeLists.txt  CTestTestfile.cmake  Makefile  ReadMe.txt  SDL-InputTest  SDL-InputTest.cpp  SDL-InputTest.vcxproj  SDL-InputTest.vcxproj.filters  stdafx.cpp  stdafx.h
Delta Applications/Tests/SDL-InputTest/Debug/: SDL-InputTest.pch  SDL-KeyInputTest.pch
Delta Applications/Tests/SDL-InputTest/Release/: CMakeLists.txt  SDL-KeyInputTest.pch
(+77 files in other folders)
